Msg and Srv Addition

--- a/robot_butler_interfaces/CMakeLists.txt
+++ b/robot_butler_interfaces/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -22,5 +23,19 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+set(MSG_FILES
+  "msg/Order.msg"
+)
+set(SRV_FILES
+  "srv/Cancel.srv"
+)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${MSG_FILES}
+  ${SRV_FILES}
+)
+
+ament_export_dependencies(rosidl_default_runtime)
 
 ament_package()
