--- a/robot_butler/package.xml
+++ b/robot_butler/package.xml
@@ -4,7 +4,7 @@
   <name>robot_butler</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="kishoresaravanan2002@gmail.com">wolf</maintainer>
+  <maintainer email="kishoresaravanan2002@gmail.com">Kishore</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
