--- a/robot_butler_interfaces/package.xml
+++ b/robot_butler_interfaces/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>robot_butler_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="kishoresaravanan2002@gmail.com">wolf</maintainer>
+  <description>Supporting Interfaces Package for Robot Butler</description>
+  <maintainer email="kishoresaravanan2002@gmail.com">Kishore</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
